2014-??-??: 3.2.0

	all : fixed nullability of abstracts over functions

2014-04-13: 3.1.3

	Bugfixes:

	all : fixed handling of abstract variance
	flash : ensure correct endianess in haxe.io.BytesBuffer
	cpp : fixed issue involving class paths with spaces
	php : fixed >>>
	macro : fixed haxe.macro.Compiler.keep

	General improvements and optimizations:

	all : give @:deprecated warnings by default, allow -D no-deprecation-warnings
	cpp : optimized Vector implementation

	Standard Library:

	all : renamed Bytes.readDouble/Float to getDouble/Float to avoid inheritance issues
	all : deprecated Bytes.readString in favor of getString
	all : added pretty-printing to haxe.format.JsonPrinter (and haxe.Json)

2014-03-29: 3.1.2

	Bugfixes:

	all : disallowed spaces between >>, >>>, >>= and >>>=
	all : fix branching issue when switching on Dynamic values with only one case
	all : added missing abstract cast call when checking for equality
	all : fixed member fields initializations on parent classes that have no constructor
	all : fixed toString usage of abstracts which are argument to Std.string
	flash : avoid rare FP 12 PPAPI JIT crash
	cpp : fixed bug in side-effect handler which caused incorrect behavior of while loops
	js : fixed missing print function for enum values with DCE
	macro : make sure member field initializations are respected

	General improvements and optimizations:

	all : cached file exist checks to speed up compilations with a lot of class paths
	all : improved completion related to super class fields
	all : allowed iterating on abstract which have get_length and @:arrayAccess fields
	js : improved Type.allEnums implementation to avoid issues with obfuscation

	Standard Library:

	all : added haxe.io.Bytes.readDouble/Float
	all : added haxe.io.BytesBuffer.addString/Float/Double

2014-03-15: 3.1.1

	New features:

	all : added -D deprecation-warnings
	all : allowed \u escape sequences in strings
	cs : implemented haxe.CallStack

	Bugfixes:
